--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=9999
+server.port=19999
 server.contextPath=/uaa
 security.user.password=password
 security.ignored=/css/**,/js/**,/favicon.ico,/webjars/**
-logging.level.org.springframework.security=DEBUG
+logging.level.root=DEBUG
